# tidyverse-hand

./: .gitignore  .gitmodules  CLAUDE.md  README.md  arm_server_piper.py  base_controller.py  base_server.py  cameras.py  config.yaml  constants.py  episode_storage.py  gamepad.sh  main.py  piper.py  piper_test.py  policies.py  real_env.py  requirements.txt  run.md
docs/: dragonbot_control_architecture.md  teleop_testing_guide.md
legacy/: policies.py  replay_episodes.py
models/dragonbot/: scene.xml
models/yam_with_hand/: scene_yam_with_hand.xml
ros2/: .gitignore
ros2/src/dragonbot_teleop/: package.xml  setup.cfg  setup.py
ros2/src/dragonbot_teleop/dragonbot_teleop/: mujoco_dragonbot_viewer.py  quest3_retargeting.py  quest3_yam_teleop.py
ros2/src/dragonbot_teleop/launch/: quest3_full_teleop.launch.py
ros2/src/dragonbot_teleop/test/: test_quest3_yam_teleop.py
scripts/hardware/: 01_yam_arm.sh  02_aero_hand.sh  launch_all.sh
scripts/teleop/: 01_spacemouse.sh  02_gello_arm.sh  03_quest3_hand.sh  experimental_quest3_arm.sh  launch_all.sh
scripts/utils/: kill_teleop.sh  sim_dragonbot.sh  sim_mujoco_hand.sh  (+2 more)
templates/: index.html
tests/: end_pose_sequence.txt  notes.md  piper_ctrl_end_pose.py  piper_ctrl_gripper.py
tools/: batch_convert_rosbags.sh  clean_lerobot_dataset.py  convert_db3_to_mcap.py  convert_mcap_to_lerobot.py  convert_rosbag_to_groot_lerobot.py  convert_rosbag_to_lerobot.py  flip_lerobot_videos.py  inspect_rosbag.py  plot_arm_action_state.py  push_dataset_to_hf_direct.py  push_lerobot_dataset_to_hf.py  validate_lerobot_dataset.py
(+37 files in other folders)
